[gd_scene load_steps=9 format=2]

[ext_resource path="res://Code/UI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Sprites/button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/button_over.png" type="Texture" id=4]
[ext_resource path="res://Fonts/OriginTech personal use.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=3]
size = 50
extra_spacing_top = 5
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_color = Color( 0.0313726, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -1.0
margin_bottom = 5.0
script = ExtResource( 1 )

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.502349
anchor_top = 0.950207
anchor_right = 0.502349
anchor_bottom = 0.950207
margin_left = -128.5
margin_top = -117.0
margin_right = 1671.5
margin_bottom = 783.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NuevaPartida" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.635
anchor_right = 0.5
anchor_bottom = 0.635
margin_left = -86.4999
margin_top = -32.105
margin_right = 1713.5
margin_bottom = 867.895
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.505
anchor_top = 0.683
anchor_right = 0.505
anchor_bottom = 0.683
margin_left = -617.885
margin_top = -238.809
margin_right = 631.115
margin_bottom = -155.809
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.360784, 0.92549, 0.886275, 0.27451 )
custom_constants/shadow_offset_x = 5
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1

[node name="JugarLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -107.5
margin_top = -103.85
margin_right = 123.5
margin_bottom = -5.85004
input_pass_on_modal_close_click = false
custom_colors/font_color = Color( 0.0156863, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.0235294, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.784314, 0.980392, 0.988235, 0.180392 )
custom_constants/shadow_offset_x = 5
custom_fonts/font = SubResource( 2 )
text = "JUGAR"
align = 1
valign = 1

[node name="NuevaPartidaLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.639
anchor_right = 0.5
anchor_bottom = 0.639
margin_left = -75.5
margin_top = -24.997
margin_right = 78.5
margin_bottom = 39.003
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.611765, 0.929412, 0.960784, 0.235294 )
custom_constants/shadow_offset_x = 5
custom_fonts/font = SubResource( 1 )
text = "Nueva Partida"
align = 1
valign = 1

[node name="StartLetrasTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NuevaPartida" to="." method="_on_Nueva_Partida_pressed"]
